# ykt

./: README.md  build.gradle  readme.md  readme.txt  settings.gradle
app/: build.gradle  proguard-rules.pro
app/release/: output-metadata.json
app/src/androidTest/java/com/vms/zjy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: newzjy.html  webZJY刷课加密参数分析.js  xposed_init
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/Help/: Md5Help.java  NetworkVerHelp.java
app/src/main/java/Model/: ApiRequestArgs.java  BusinessType.java  EncryptType.java  Result.java
app/src/main/java/Model/In/: In_AccountLoginArgs.java  In_AccountRegisterArgs.java  In_BucklePointArgs.java  In_BuyGoodsArgs.java  In_CardLoginArgs.java  In_CreateCardArgs.java  In_DataBaseArgs.java  In_HeartBeatArgs.java  In_IniSoftInfoArgs.java  In_LoginOutArgs.java  In_OpenRenewAccountArgs.java  In_OpenRenewCardNumArgs.java  In_SearchOrderArgs.java  In_UpdOrderFlagArgs.java  In_UpdPwdArgs.java  In_accountDetailArgs.java  In_cardDetailArgs.java  In_getGoodsPriceArgs.java  In_getRemoteVarArgs.java  In_getSoftPriceListArgs.java  In_unbundMacArgs.java
app/src/main/java/com/vms/ykt/: BaseViewModel.java  (+3 more)
app/src/main/java/networkverification/: MainActivity.java
app/src/main/jni/: Android.mk  CMakeLists.txt  MD5.cpp  MD5.h  aes.h  common.h  get-cup.cpp  native-lib.cpp  native2-lib.cpp  native2-lib.h
app/src/main/jni/checkBuy/: native-shell.cpp
app/src/main/res/drawable/: page_point.xml  page_point_nopress.xml  page_point_press.xml
app/src/main/res/layout/: activity_login.xml  activity_main.xml  newzjy_main_dialog.xml  set_fragmt_view.xml  test_activity.xml  ykt_cqooc_dialog.xml  ykt_cqooc_fragmt_view.xml  ykt_icve_dialog.xml  ykt_icve_fragmt_view.xml  ykt_login_kmjh_dialog.xml  ykt_mooc_dialog.xml  ykt_mooc_fragmt_view.xml  ykt_switchpt_dialog.xml  ykt_zjy_dialog.xml  ykt_zjy_fragmt_view.xml
app/src/main/res/layout/values/: test.xml
app/src/main/res/layout/values-en/: strings.xml
app/src/main/res/menu/: toolbar_menu_friend.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_path.xml  searchable.xml
app/src/main/shellOut/arm64-v8a/: nshell
app/src/main/shellOut/armeabi-v7a/: nshell
gradle/wrapper/: gradle-wrapper.properties
(+343 files in other folders)
